<?xml version="1.0"?>
<package format="3">
  <name>ai_robot_navigator</name>
  <version>0.0.0</version>
  <description>AI Robot Navigator using LiDAR</description>

  <maintainer email="user@todo.com">shreyas</maintainer>

  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>